feat: adição de estilos globais, tal como cor e transition

--- a/src/global.css
+++ b/src/global.css
@@ -68,3 +68,10 @@ button:hover,
 a:hover {
   cursor: pointer;
 }
+a, button{
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+*{
+  color: #fff;
+}
